--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -18,7 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="90dp"
         android:text="@string/app_btn_guide"
-        android:textColor="@android:color/white"
+        android:textColor="@color/txt_guide_selector"
         android:background="@drawable/btn_guide_selector"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
