重新添加ViewPagerIndicator依赖，新闻详情页基本功能完成

--- a/ViewPagerIndicatorLlibrary/src/main/res/values/vpi__colors.xml
+++ b/ViewPagerIndicatorLlibrary/src/main/res/values/vpi__colors.xml
@@ -15,6 +15,7 @@
 -->
 
 <resources>
+    <color name="colorRed">#ff0b1d</color>
     <color name="vpi__background_holo_dark">#ff000000</color>
     <color name="vpi__background_holo_light">#fff3f3f3</color>
     <color name="vpi__bright_foreground_holo_dark">@color/vpi__background_holo_light</color>
