--- a/app/src/main/res/layout/layout_tab_detail.xml
+++ b/app/src/main/res/layout/layout_tab_detail.xml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        />
+        android:layout_height="wrap_content">
 
+        <com.potato.zhbj.view.TopNewsViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="180dp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#61000000"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/tv_topic_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="标题"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/txt_topic_title" />
+
+            <com.viewpagerindicator.CirclePageIndicator
+                android:id="@+id/tabIndicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingLeft="5dp"
+                app:fillColor="@color/colorRed"
+                app:pageColor="@color/colorGray"
+                app:radius="3dp"
+                app:strokeWidth="0dp" />
+        </RelativeLayout>
+    </FrameLayout>
 
 </LinearLayout>
