--- a/ViewPagerIndicatorLlibrary/src/main/res/values/vpi__styles.xml
+++ b/ViewPagerIndicatorLlibrary/src/main/res/values/vpi__styles.xml
@@ -31,13 +31,13 @@
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingBottom">12dp</item>
         <item name="android:textAppearance">@style/TextAppearance.TabPageIndicator</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">22sp</item>
         <item name="android:maxLines">1</item>
     </style>
 
     <style name="TextAppearance.TabPageIndicator" parent="Widget">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/vpi__dark_theme</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/txt_tab_selector</item>
     </style>
 
     <style name="Widget.IconPageIndicator" parent="Widget">
