--- a/ViewPagerIndicatorLlibrary/src/main/res/color/vpi__dark_theme.xml
+++ b/ViewPagerIndicatorLlibrary/src/main/res/color/vpi__dark_theme.xml
@@ -15,10 +15,10 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="@color/vpi__bright_foreground_disabled_holo_dark"/>
-    <item android:state_window_focused="false" android:color="@color/vpi__bright_foreground_holo_dark"/>
-    <item android:state_pressed="true" android:color="@color/vpi__bright_foreground_holo_dark"/>
-    <item android:state_selected="true" android:color="@color/vpi__bright_foreground_holo_dark"/>
+    <item android:state_enabled="false" android:color="@android:color/black"/>
+    <item android:state_window_focused="false" android:color="@android:color/black"/>
+    <item android:state_pressed="true" android:color="@color/colorRed"/>
+    <item android:state_selected="true" android:color="@color/colorRed"/>
     <!--item android:state_activated="true" android:color="@color/vpi__bright_foreground_holo_dark"/-->
-    <item android:color="@color/vpi__bright_foreground_holo_dark"/> <!-- not selected -->
+    <item android:color="@android:color/black"/> <!-- not selected -->
 </selector>
