--- a/app/src/main/res/layout/layout_titlebar.xml
+++ b/app/src/main/res/layout/layout_titlebar.xml
@@ -22,7 +22,16 @@
         android:layout_marginLeft="10dp"
         android:background="@null"
         android:src="@drawable/ic_menu" />
-
+    <ImageButton
+        android:id="@+id/btn_photos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:background="@null"
+        android:visibility="gone"
+        android:src="@drawable/ic_grid_type" />
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
