--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorGray">#9e9699</color>
+    <color name="colorGray1">#36c6b8bd</color>
     <color name="colorRed">#ff0b1d</color>
 </resources>
